# noetica

./: .gitignore  README.md  l10n.yaml  pubspec.yaml  test-plan.md  test-report.md
.github/workflows/: backend.yml  release.yml
android/app/: build.gradle
assets/icons/: tab_home.json  tab_profile.json  (+1 more)
backend/: .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
backend/app/: auth.py  db.py  llm.py  main.py  prompts_coach.py  prompts_habits.py  prompts_menu.py  schemas.py  sync.py
backend/reports/: 01_burned_out_student.md  02_new_mom_returning.md  03_senior_to_manager.md  04_med_student_ordinatura.md  EVALUATION.md  index.md
backend/tests/: conftest.py  persona_goldens.py  test_auth.py  test_db_migration.py  test_habits.py  test_llm_config.py  test_menu.py  test_sync.py
docs/: redesign-v2.md
landing/: index.html  script.js  style.css
lib/: app.dart  main.dart  providers.dart
linux/: CMakeLists.txt  my_application.cc
portfolio/: index.html  script.js  style.css
test/: backend_urls_service_test.dart  body_utils_test.dart  dashboard_pulse_layout_test.dart  entry_editor_pr16_test.dart  epoch_ceremony_test.dart  epoch_overlay_widget_test.dart  generator_form_view_test.dart  generator_input_test.dart  generator_manifest_test.dart  graph_links_test.dart  habits_manifest_wire_test.dart  levels_test.dart  live_markdown_controller_test.dart  menu_manifest_wire_test.dart  profile_epoch_test.dart  repository_score_test.dart  subtask_utils_test.dart  ux_pass_layout_test.dart  widget_test.dart
web/: index.html
windows/: CMakeLists.txt
(+82 files in other folders)
